--- a/config/default.toml
+++ b/config/default.toml
@@ -57,5 +57,7 @@ consecutive_no_improvement_threshold = 20
 
 [autonomous]
 enabled = true
-tick_minutes = 5
+tick_minutes = 5               # floor — mínimo entre ticks (minutos)
+max_idle_tick_minutes = 60     # ceiling — tick cuando no hay proyectos con objective
+target_minutes_per_project = 30 # cada cuánto debería atenderse cada proyecto
 max_concurrent = 1
